update table
