# backend/controllers/patient_controller.go
@@ -2,6 +2,7 @@ package controllers
 
 import (
 	"context"
+	"fmt"
 	"strconv"
 
 	"github.com/Sujitnapa21/app/ent"
@@ -187,6 +188,83 @@ func (ctl *PatientController) ListPatient(c *gin.Context) {
 	c.JSON(200, patients)
 }
 
+// DeletePatient handles DELETE requests to delete a patient entity
+// @Summary Delete a patient entity by ID
+// @Description get patient by ID
+// @ID delete-patient
+// @Produce  json
+// @Param id path int true "Patient ID"
+// @Success 200 {object} gin.H
+// @Failure 400 {object} gin.H
+// @Failure 404 {object} gin.H
+// @Failure 500 {object} gin.H
+// @Router /patients/{id} [delete]
+func (ctl *PatientController) DeletePatient(c *gin.Context) {
+	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	err = ctl.client.Patient.
+		DeleteOneID(int(id)).
+		Exec(context.Background())
+	if err != nil {
+		c.JSON(404, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	c.JSON(200, gin.H{"result": fmt.Sprintf("ok deleted %v", id)})
+}
+
+// UpdatePatient handles PUT requests to update a patient entity
+// @Summary Update a patient entity by ID
+// @Description update patient by ID
+// @ID update-patient
+// @Accept   json
+// @Produce  json
+// @Param id path int true "Patient ID"
+// @Param patienttype body ent.Patient true "Patient entity"
+// @Success 200 {object} ent.Patient
+// @Failure 400 {object} gin.H
+// @Failure 500 {object} gin.H
+// @Router /patients/{id} [put]
+func (ctl *PatientController) UpdatePatient(c *gin.Context) {
+	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	obj := ent.Patient{}
+	if err := c.ShouldBind(&obj); err != nil {
+		c.JSON(400, gin.H{
+			"error": "patienttype binding failed",
+		})
+		return
+	}
+	obj.ID = int(id)
+	fmt.Println(obj.ID)
+	p, err := ctl.client.Patient.
+		UpdateOneID(int(id)).
+		SetName(obj.Name).
+		Save(context.Background())
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": "update failed",
+		})
+		return
+	}
+
+	c.JSON(200, p)
+}
+
 // NewPatientController creates and registers handles for the patient controller
 func NewPatientController(router gin.IRouter, client *ent.Client) *PatientController {
 	pc := &PatientController{
@@ -201,5 +279,7 @@ func (ctl *PatientController) register() {
 	patients := ctl.router.Group("/patients")
 	patients.POST("", ctl.CreatePatient)
 	patients.GET("", ctl.ListPatient)
+	patients.PUT("id", ctl.ListPatient)
+	patients.DELETE("id", ctl.ListPatient)
 
 }
